# predict-short-term-rental-price

./: .gitignore  README.md  pyproject.toml
src/basic_cleaning/: MLproject  python_env.yaml  run.py
src/data_check/: MLproject  conftest.py  python_env.yaml  test_data.py
src/eda/: MLproject  eda.ipynb  python_env.yaml
steps/basic_cleaning/: run.py
steps/get_data/: MLproject  python_env.yaml  run.py
steps/get_data/data/: sample1.csv
steps/trainval_test_split/: MLproject  python_env.yaml  run.py
